--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,17 @@
 {
   "name": "dnaviewer",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "dependencies": {
     "angular": "^1.3.0",
-    "bootstrap": "^3.2.0",
+    "bootstrap": "~3.2.0",
+    "angular-bootstrap": "",
     "angular-animate": "^1.3.0",
     "angular-cookies": "^1.3.0",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "angular-loading-bar": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
